<resources>
    <string name="app_name">HangIN</string>
    <string name="image">Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="connected">Connected!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="sydney">Sydney</string>
    <string name="rate">(5/5)</string>
    <string name="address">address</string>
    <string name="calll_number">01222222222</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="fad_face">fad_face</string>
    <string name="location">Location</string>
    <string name="about">About</string>
    <string name="menu">Menu</string>
    <string name="reviews">Reviews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
