<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.auth.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="48dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="48dp"/>

    <ImageView
            android:id="@+id/login_back_imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_login_back"/>

    <View
            android:id="@+id/login_back_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.5"
            android:background="@drawable/side_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

    </View>

    <ImageView
            android:id="@+id/login_logo_imageView"
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/logo_hangin_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/login_email_editText"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/back_solid_white_transparent"
            android:hint="@string/email"
            android:drawableEnd="@drawable/email_foreground"
            android:fontFamily="@font/gotham_rounded_light"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/login_logo_imageView"
        android:importantForAutofill="no" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_solid_white_transparent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/login_email_editText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/gotham_rounded_light"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/login_forget_password_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gotham_rounded_book"
        android:onClick="forget_your_password"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/forget_your_password"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/login_password_editText" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_solid_white"
        android:elevation="6dp"
        android:fontFamily="@font/gotham_rounded_book"
        android:foreground="?selectableItemBackground"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/login_forget_password_text_view" />

    <LinearLayout
            android:id="@+id/login_views_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/login_button">

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/colorWhite">

        </View>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/or"
                android:fontFamily="@font/gotham_rounded_book"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/colorWhite">

        </View>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/login_social_media_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/login_views_layout">


        <Button
            android:id="@+id/login_facebook_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:foreground="?selectableItemBackground"
            android:background="@drawable/back_solid_white"
            android:drawableStart="@drawable/ic_facebook"
            android:elevation="6dp"
            android:fontFamily="@font/gotham_rounded_book"
            android:onClick="login_facebook"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/facebook"
            android:textColor="@color/colorFacebook"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="SmallSp"
            tools:targetApi="m" />

        <Button
            android:id="@+id/login_google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/back_solid_white"
            android:foreground="?selectableItemBackground"
            android:drawableStart="@drawable/ic_google_plus"
            android:elevation="6dp"
            android:fontFamily="@font/gotham_rounded_book"
            android:onClick="login_google"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/google"
            android:textColor="@color/colorGoogle"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="SmallSp"
            tools:targetApi="m" />

    </LinearLayout>

    <TextView
            android:id="@+id/login_do_not_have_account_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingEnd="0dp"
            android:fontFamily="@font/gotham_rounded_book"
            android:paddingStart="4dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/login_social_media_layout"/>

    <TextView
        android:id="@+id/login_new_account_text_view"
        android:layout_width="wrap_content"
        android:elevation="6dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/gotham_rounded_medium"
        android:onClick="sign_up"
        android:paddingStart="0dp"
        android:paddingEnd="4dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_do_not_have_account_text_view"
        app:layout_constraintStart_toEndOf="@+id/login_do_not_have_account_text_view"
        app:layout_constraintTop_toTopOf="@+id/login_do_not_have_account_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>