<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.details.Place_detail"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:elevation="4dp"
        android:id="@+id/app_bar"
        android:fitsSystemWindows="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/back_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/img_login_back" />

            <View
                android:id="@+id/back_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.7"
                android:background="@color/colorBackTransparent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/con"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/place_profile"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_placeholder"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/con" />

                <TextView
                    android:id="@+id/place_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sydney"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/place_profile" />

                <LinearLayout
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/place_name">

                    <RatingBar
                        android:id="@+id/rate_bar"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:progressBackgroundTint="@color/colorPrimary"
                        android:progressTint="@color/colorPrimary"
                        android:rating="5"
                        android:theme="@style/ratingbar" />

                    <TextView
                        android:id="@+id/rating_from5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/place_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:drawableStart="@drawable/location_foreground"
                    android:maxLines="2"
                    android:textAlignment="gravity"
                    android:text="@string/address"
                    android:textColor="#F7F4F4"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rate" />

                <TextView
                    android:id="@+id/call_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:drawableStart="@drawable/phone_foreground"
                    android:text="@string/calll_number"
                    android:textColor="#F7F4F4"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/place_address" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/call_tv">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/cardview_shadow_start_color"
                        android:contentDescription="@string/fad_face"
                        android:elevation="6dp"
                        android:scaleType="center"
                        android:src="@drawable/baseline_language_white_24dp"
                        android:stateListAnimator="@animator/fab_state_list_anim"
                        android:tint="@color/colorWhite" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/cardview_shadow_start_color"
                        android:contentDescription="@string/fad_face"
                        android:elevation="6dp"
                        android:src="@drawable/ic_facebook"
                        android:stateListAnimator="@animator/fab_state_list_anim"
                        android:tint="@color/colorWhite" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="66dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="#33EB3B"
                        android:contentDescription="@string/fad_face"
                        android:elevation="6dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/baseline_phone_white_24dp_big"
                        android:stateListAnimator="@animator/fab_state_list_anim"
                        android:tint="@color/colorWhite"
                        app:fabSize="auto" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemTextColor="@color/colorWhite"
        android:id="@+id/bottom_navigation"
        android:background="@color/colorBackTransparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:labelVisibilityMode="labeled"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:menu="@menu/navigation"
        />

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_navigation">


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>